# anki

./: AGENTS.md  CONTRIBUTORS  README.md  justfile
.claude/: settings.example.json
ftl/qt/: qt-misc.ftl
proto/anki/: speedrun.proto
pylib/anki/: collection.py  speedrun.py
pylib/tests/: conftest.py  test_speedrun.py  test_speedrun_interleave.py  test_speedrun_scores.py
qt/aqt/: __init__.py  main.py  mediasrv.py  speedrun.py  speedrun_ai.py  speedrun_capture.py  speedrun_logic.py  speedrun_timer.py  webview.py
qt/aqt/forms/: main.ui
qt/installer/windows-template/: README.md  cookiecutter.json
qt/tests/: test_speedrun.py  test_speedrun_ai.py  test_speedrun_crash_offline.py
rslib/proto/src/: lib.rs
rslib/src/scheduler/: new.rs
rslib/src/speedrun/: ablation.rs  bench.rs  calibration_eval.rs  exam_profile.rs  mod.rs  service.rs
speedrun/: .gitignore  README.md  pyproject.toml  uvw.ps1  uvw.sh
speedrun/eval/: crash-offline-results.json  crash_offline_test.py  memory-calibration.json
speedrun/exam_profiles/: gre_math.json  schema.md
speedrun/scraper/: scrape_openstax.py  topic_rules.yaml
speedrun/seed/: build_seed_deck.py  cards_calc.yaml  cards_linear_algebra.yaml  problems_calc.yaml  problems_linear_algebra.yaml
speedrun/tests/: test_exam_profile.py  test_seed_deck.py  test_topic_rules.py
ts/: svelte.config.js
ts/lib/speedrun/: SpeedrunShell.svelte  data.test.ts  data.ts
ts/reviewer/: _run-palette.scss  reviewer.scss
ts/routes/: base.scss
ts/routes/speedrun-home/: +page.svelte  ActionBar.svelte  ReadinessGauge.svelte  RunHeader.svelte  (+6 more)
(+32 files in other folders)
